[package]
name = "learn_positional_notation"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "Readme.md"
repository = "https://github.com/kopp/learn_positional_notation"
license = "MIT"
keywords = ["learn", "math", "elementary"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version="0.20", features=["csr"] }
rand = "0.8"
# enable rand on wasm -- see https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }